import squad role agents and orchestration skills

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@cursed-factory/dropkit-template",
+  "name": "@cursed-factory/dropkit-squad",
   "version": "0.1.0",
-  "description": "Template dropkit package with agent/command/skill skeletons for OpenCode.",
+  "description": "Dropkit package for a multi-role engineering squad (intern, developer, designer, researcher, PR, QA).",
   "license": "MIT",
   "type": "module",
   "sideEffects": false,
@@ -31,10 +31,11 @@
   "keywords": [
     "opencode",
     "dropkit",
-    "agent",
-    "command",
-    "skill",
-    "template"
+    "squad",
+    "engineering",
+    "qa",
+    "research",
+    "designer"
   ],
   "publishConfig": {
     "access": "public"
